[package]
name = "pong_multiplayer_rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_crt = "0.1.2"
bevy_internal = "0.8.0"
bevy_renet = "0.0.5"
bincode = "1.3.3"
iyes_loopless = "0.7.1"
num = "0.4.0"
rand = "0.8.5"
serde = "1.0.144"
threadpool = "1.8.1"
